using UnityEngine;

public enum DecisionMode
{
    ClassicFSM,
    Utility,
    FCM
}